[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "qrcode-artistic"
description = "Artistic (Micro) QR Code plugin for Segno"
dynamic = ["version"]
readme = "README.rst"
license = {file = "LICENSE"}
authors = [{"name" = "Lars Heuer", email = "heuer@semagia.com"}]
requires-python = ">= 3.5"
keywords = ["QR Code", "Micro QR Code", "ISO/IEC 18004", "ISO/IEC 18004:2006(E)",
    "ISO/IEC 18004:2015(E)", "qrcode", "QR", "barcode", "matrix", "2D",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
  "segno>=1.0.2",
  "Pillow",
]


[project.entry-points."segno.plugin.converter"]
pil = "qrcode_artistic:write_pil"
artistic = "qrcode_artistic:write_artistic"


[project.optional-dependencies]
svg = ["cairosvg"]


[project.urls]
Homepage = "https://github.com/heuer/qrcode-artistic/"
Documentation = "https://segno.readthedocs.io/en/latest/artistic-qrcodes.html"
Repository = "https://github.com/heuer/qrcode-artistic.git"
Changelog = "https://github.com/heuer/qrcode-artistic/blob/master/CHANGES.rst"
"Issue Tracker" = "https://github.com/heuer/qrcode-artistic/issues"


[tool.coverage.run]
branch = true


[tool.coverage.report]
exclude_lines = """
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
"""   
include = "qrcode_art*"

